improve test coverage

--- a/.env.example
+++ b/.env.example
@@ -5,15 +5,65 @@
 # This file is intended for developer convenience only. In production, prefer
 # configuring environment variables via your deployment platform and secret store.
 
-# --- Incoming auth (shared across ARP servers) ---
-#
-# If you set either ARP_AUTH_MODE or ARP_AUTH_PROFILE, the server will enable
-# JWT auth middleware using these settings.
-#
-# Dev convenience: leave unset to run auth-disabled, or use:
+# --- Selection Service (outbound) ---
+# Required:
+JARVIS_SELECTION_URL=http://127.0.0.1:8085
+# Optional overrides:
+# JARVIS_SELECTION_AUDIENCE=arp-jarvis-selection
+
+# --- Node Registry (outbound) ---
+# Required:
+JARVIS_NODE_REGISTRY_URL=http://127.0.0.1:8084
+# Optional overrides:
+# JARVIS_NODE_REGISTRY_AUDIENCE=arp-jarvis-noderegistry
+
+# --- LLM profile (required) ---
+# Use dev-mock to avoid network for local tests:
+ARP_LLM_PROFILE=dev-mock
+# For real providers:
+# ARP_LLM_PROFILE=openai
+# ARP_LLM_CHAT_MODEL=gpt-4.1-mini
+# ARP_LLM_API_KEY=changeme
+# Optional overrides:
+# ARP_LLM_BASE_URL=
+# ARP_LLM_TIMEOUT_SECONDS=30
+# ARP_LLM_MAX_RETRIES=2
+# ARP_LLM_TEMPERATURE=
+
+# --- Planning limits (required) ---
+# These can be overridden per composite NodeRun via inputs or constraints.
+JARVIS_COMPOSITE_MAX_STEPS=8
+JARVIS_COMPOSITE_MAX_DEPTH=4
+
+# --- Incoming auth (JWT) ---
+# Profiles (ARP_AUTH_PROFILE) preset defaults:
+# - dev-insecure: ARP_AUTH_MODE=disabled
+# - dev-secure-keycloak: ARP_AUTH_MODE=required, ARP_AUTH_ISSUER=http://localhost:8080/realms/arp-dev
+# - enterprise/prod: ARP_AUTH_MODE=required
+# Required for local Keycloak STS:
+ARP_AUTH_PROFILE=dev-secure-keycloak
+ARP_AUTH_AUDIENCE=arp-composite-executor
+ARP_AUTH_ISSUER=http://localhost:8080/realms/arp-dev
+# Optional overrides:
+# ARP_AUTH_MODE=disabled
 # ARP_AUTH_PROFILE=dev-insecure
-#
-# For Keycloak local dev (requires ARP_STS_KeyCloak running):
-# ARP_AUTH_PROFILE=dev-secure-keycloak
-# ARP_AUTH_SERVICE_ID=arp-composite-executor
-# ARP_AUTH_ISSUER=http://localhost:8080/realms/arp-dev
+# ARP_AUTH_JWKS_URI=
+# ARP_AUTH_OIDC_DISCOVERY_URL=
+# ARP_AUTH_ALGORITHMS=RS256
+# ARP_AUTH_CLOCK_SKEW_SECONDS=60
+# ARP_AUTH_EXEMPT_PATHS=/v1/health,/v1/version
+
+# --- Outbound auth (token exchange to STS) ---
+# Required:
+ARP_AUTH_CLIENT_ID=arp-composite-executor
+ARP_AUTH_CLIENT_SECRET=changeme
+ARP_AUTH_TOKEN_ENDPOINT=http://localhost:8080/realms/arp-dev/protocol/openid-connect/token
+# Optional overrides:
+# ARP_AUTH_TIMEOUT_SECS=10
+
+# --- Operational (optional) ---
+# JARVIS_MAX_CONCURRENCY=10
+# JARVIS_COMPOSITE_CONTEXT_WINDOW=5
+# JARVIS_COMPOSITE_ARGGEN_MAX_RETRIES=1
+# JARVIS_COMPOSITE_POLL_TIMEOUT_SEC=30
+# JARVIS_COMPOSITE_POLL_INTERVAL_SEC=1
