--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,30 +3,32 @@ requires = ["setuptools>=70", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "arp-template-composite-executor"
+name = "jarvis-composite-executor"
 version = "0.3.1"
-description = "Template Composite Executor implementation for the ARP Standard (spec/v1)."
+description = "JARVIS Composite Executor implementation for the ARP Standard (spec/v1)."
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 license = "MIT"
 license-files = ["LICENSE"]
 authors = [{ name = "Agent Runtime Protocol" }]
 dependencies = [
+  "arp-auth==0.2.0",
+  "arp-llm==0.1.0",
   "arp-standard-client==0.3.1",
   "arp-standard-server==0.3.1",
   "arp-standard-model==0.3.1",
+  "jsonschema>=4.21.1",
+  "uvicorn>=0.29.0",
 ]
 
 [project.optional-dependencies]
-dev = ["pyright>=1.1.0", "pytest>=7"]
-run = ["uvicorn>=0.29.0"]
+dev = ["pyright>=1.1.0", "pytest>=7", "pytest-cov>=4"]
 
 [project.scripts]
-arp-template-composite-executor = "arp_template_composite_executor.__main__:main"
+jarvis-composite-executor = "jarvis_composite_executor.__main__:main"
 
 [tool.setuptools]
 package-dir = { "" = "src" }
 
 [tool.setuptools.packages.find]
 where = ["src"]
-
