add docker image and ghcr integration, bump to v0.3.3

--- a/.env.example
+++ b/.env.example
@@ -18,12 +18,14 @@ JARVIS_NODE_REGISTRY_URL=http://127.0.0.1:8084
 # JARVIS_NODE_REGISTRY_AUDIENCE=arp-jarvis-noderegistry
 
 # --- LLM profile (required) ---
-# Use dev-mock to avoid network for local tests:
-ARP_LLM_PROFILE=dev-mock
-# For real providers:
-# ARP_LLM_PROFILE=openai
-# ARP_LLM_CHAT_MODEL=gpt-4.1-mini
-# ARP_LLM_API_KEY=changeme
+# Default provider is OpenAI (network required):
+ARP_LLM_PROFILE=openai
+ARP_LLM_CHAT_MODEL=gpt-4.1-mini
+ARP_LLM_API_KEY=changeme
+# Dev mock (optional; no network):
+# ARP_LLM_PROFILE=dev-mock
+# Optional: provide deterministic fixtures
+# ARP_LLM_DEV_MOCK_FIXTURES_PATH=./fixtures.json
 # Optional overrides:
 # ARP_LLM_BASE_URL=
 # ARP_LLM_TIMEOUT_SECONDS=30
